Fixed grammar typos

--- a/recipes/cornbreadSalad.html
+++ b/recipes/cornbreadSalad.html
@@ -20,7 +20,7 @@
         <li>10 slices bacon</li>
         <li>1 ½ cups sour cream</li>
         <li>1 ½ cups mayonnaise</li>
-        <li>1 (1 ounce) package ranch dressing mix</li>\
+        <li>1 (1 ounce) package ranch dressing mix</li>
         <li>2 (15 ounce) cans pinto beans, drained</li>
         <li>3 tomatoes, chopped</li>
         <li>1 cup chopped green bell pepper</li>
