Added some style

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
-</head>
+    <link rel="stylesheet" href="css/mainstyle.css">
+</head> 
 <body>
-    <h1>Recipes</h1>
+    <h1 class="align-text-center">Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/cornbreadSalad.html">Cornbread Salad</a></li>
