--- a/recipes/hamNcheese.html
+++ b/recipes/hamNcheese.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ham and Cheese</title>
+    <link rel="stylesheet" href="../css/mainstyle.css">
 </head>
 <body>
     <h1>Ham and Cheese</h1>
