--- a/recipes/cornbreadSalad.html
+++ b/recipes/cornbreadSalad.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cornbread Salad</title>
+    <link rel="stylesheet" href="../css/mainstyle.css">
 </head>
 <body>
     <h1>Cornbread Salad</h1>
