--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../css/mainstyle.css">
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="lasagna.webp" alt="Lasagna">
+    <img src="lasagna.webp" alt="Lasagna" height="auto" width="550">
 
     <h2>Description</h2>
     <p>
